<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="5dp"
            android:paddingVertical="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:gravity="right">
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter1"
                    android:background="@drawable/background_blue1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:gravity="left">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="90dp"
                    app:cardElevation="10dp"
                    android:layout_gravity="center"
                    >
                    <ImageView
                        style="@style/img_mess"
                        android:src="@drawable/smile"
                        />
                </androidx.cardview.widget.CardView>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter2"
                    android:fontFamily="@font/indie_flower"
                    android:textStyle="bold"
                    android:background="@drawable/background_gray1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:paddingRight="10dp"
                android:gravity="right">
                <TextView
                    style="@style/textView_MyBackgroundAutoHeight"
                    android:text="@string/letter3"
                    android:background="@drawable/background_blue1"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="90dp"
                    app:cardElevation="10dp"
                    android:layout_gravity="center"
                    >
                    <ImageView
                        style="@style/img_mess"
                        android:src="@drawable/smile"
                        />
                </androidx.cardview.widget.CardView>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter4"
                    android:fontFamily="@font/indie_flower"
                    android:background="@drawable/background_gray1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:paddingRight="10dp"
                android:gravity="right">
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter5"
                    android:background="@drawable/background_blue3"/>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter6"
                    android:background="@drawable/background_blue2"/>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter7"
                    android:background="@drawable/background_blue4"/>
            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                >
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter8"
                    android:layout_width="150dp"
                    android:fontFamily="@font/indie_flower"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/background_gray2"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="90dp"
                        app:cardElevation="10dp"
                        android:layout_gravity="center"
                        >
                        <ImageView
                            style="@style/img_mess"
                            android:src="@drawable/smile"
                            />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        style="@style/textView_MyBackground"
                        android:text="@string/letter9"
                        android:layout_width="150dp"
                        android:fontFamily="@font/indie_flower"
                        android:background="@drawable/background_gray4"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:paddingRight="10dp"
                android:gravity="right">
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter10"
                    android:background="@drawable/background_blue3"/>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter11"
                    android:background="@drawable/background_blue2"/>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter12"
                    android:background="@drawable/background_blue2"/>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter13"
                    android:background="@drawable/background_blue2"/>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter14"
                    android:background="@drawable/background_blue2"/>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter16"
                    android:background="@drawable/background_blue4"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="90dp"
                    app:cardElevation="10dp"
                    android:layout_gravity="center"
                    >
                    <ImageView
                        style="@style/img_mess"
                        android:src="@drawable/smile"
                        />
                </androidx.cardview.widget.CardView>
                <TextView
                    style="@style/textView_MyBackgroundAutoHeight"
                    android:text="@string/letter17"
                    android:fontFamily="@font/indie_flower"
                    android:background="@drawable/background_gray1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:paddingRight="10dp"
                android:gravity="right">
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter18"
                    android:background="@drawable/background_blue3"/>
                <TextView
                    style="@style/textView_MyBackgroundAutoHeight"
                    android:text="@string/letter19"
                    android:background="@drawable/background_blue2"/>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter20"
                    android:background="@drawable/background_blue2"/>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter21"
                    android:background="@drawable/background_blue2"/>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter22"
                    android:background="@drawable/background_blue2"/>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter16"
                    android:background="@drawable/background_blue4"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                >
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter23"
                    android:fontFamily="@font/indie_flower"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/background_gray2"
                    />
                <TextView
                    style="@style/textView_MyBackgroundAutoHeight"
                    android:text="@string/letter24"
                    android:fontFamily="@font/indie_flower"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/background_gray3"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="90dp"
                        app:cardElevation="10dp"
                        android:layout_gravity="center"
                        >
                        <ImageView
                            style="@style/img_mess"
                            android:src="@drawable/smile"
                            />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        style="@style/textView_MyBackground"
                        android:text="@string/letter25"
                        android:fontFamily="@font/indie_flower"
                        android:background="@drawable/background_gray4"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:paddingRight="10dp"
                android:gravity="right">
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter26"
                    android:background="@drawable/background_blue1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="90dp"
                    app:cardElevation="10dp"
                    android:layout_gravity="center"
                    >
                    <ImageView
                        style="@style/img_mess"
                        android:src="@drawable/smile"
                        />
                </androidx.cardview.widget.CardView>
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter27"
                    android:fontFamily="@font/indie_flower"
                    android:background="@drawable/background_gray1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:paddingRight="10dp"
                android:gravity="right">
                <TextView
                    style="@style/textView_MyBackgroundAutoHeight"
                    android:text="@string/letter28"
                    android:background="@drawable/background_blue1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                >
                <TextView
                    style="@style/textView_MyBackgroundAutoHeight"
                    android:text="@string/letter29"
                    android:fontFamily="@font/indie_flower"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/background_gray2"
                    />
                <TextView
                    style="@style/textView_MyBackgroundAutoHeight"
                    android:text="@string/letter30"
                    android:fontFamily="@font/indie_flower"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/background_gray3"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="90dp"
                        app:cardElevation="10dp"
                        android:layout_gravity="center"
                        >
                        <ImageView
                            style="@style/img_mess"
                            android:src="@drawable/smile"
                            />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        style="@style/textView_MyBackground"
                        android:text="@string/letter31"
                        android:fontFamily="@font/indie_flower"
                        android:background="@drawable/background_gray4"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:paddingRight="10dp"
                android:gravity="right">
                <TextView
                    style="@style/textView_MyBackground"
                    android:text="@string/letter32"
                    android:background="@drawable/background_blue1"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>